--- a/app/src/main/res/layout/activity_bannar.xml
+++ b/app/src/main/res/layout/activity_bannar.xml
@@ -10,6 +10,7 @@
     <include layout="@layout/common_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
+
     <android.support.v4.view.ViewPager
         android:id="@+id/vp_home"
         android:layout_width="match_parent"
@@ -22,8 +23,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
+        app:bnbActiveColor="@color/white"
+        app:bnbBackgroundColor="@color/colorPrimary"
+        app:bnbBackgroundStyle="background_style_static"
     />
-    <!--app:bnbActiveColor="@color/white"-->
-    <!--app:bnbBackgroundColor="@color/colorPrimary"-->
-    <!--app:bnbBackgroundStyle="background_style_static"-->
+
 </LinearLayout >
