--- a/app/src/main/res/layout/fragment_guanggao.xml
+++ b/app/src/main/res/layout/fragment_guanggao.xml
@@ -2,10 +2,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.ls.kylibary.banner.GuanggaoFragment">
 
-    <com.ls.libarys.lybanner.LsBanner
+    <com.ls.libarys.banner.Banner
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/banner3"
         android:layout_width="match_parent"
         android:layout_height="160dp"
