--- a/libarys/src/main/res/values/attrs.xml
+++ b/libarys/src/main/res/values/attrs.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <declare-styleable name="ConvenientBanner">
-        <attr name="canLoop" format="boolean" />
-    </declare-styleable>
+
 
     <declare-styleable name="CircleImageView">
         <attr name="civ_border_width" format="dimension" />
@@ -12,41 +10,6 @@
         <attr name="civ_fill_color" format="color" />
         <attr name="civ_circle_background_color" format="color" />
     </declare-styleable>
-
-
-    <declare-styleable name="RefreshView">
-        <attr name="type" format="enum">
-            <enum name="sun" value="0" />
-        </attr>
-    </declare-styleable>
-    <declare-styleable name="CircleFlowIndicator">
-        <attr name="activeColor" format="color" />
-        <attr name="inactiveColor" format="color" />
-        <attr name="radius" format="dimension" />
-        <attr name="centered" format="boolean" />
-        <attr name="fadeOut" format="integer" />
-        <attr name="inactiveType">
-            <flag name="stroke" value="0" />
-            <flag name="fill" value="1" />
-        </attr>
-        <attr name="activeType">
-            <flag name="stroke" value="0" />
-            <flag name="fill" value="1" />
-        </attr>
-        <attr name="circleSeparation" format="dimension" />
-        <attr name="activeRadius" format="dimension" />
-    </declare-styleable>
-    <declare-styleable name="ViewFlow">
-        <attr name="sidebuffer" format="integer" />
-    </declare-styleable>
-    <declare-styleable name="IRecyclerView">
-        <attr name="refreshHeaderLayout" format="reference" />
-        <attr name="loadMoreFooterLayout" format="reference" />
-        <attr name="refreshEnabled" format="boolean" />
-        <attr name="loadMoreEnabled" format="boolean" />
-        <attr name="refreshFinalMoveOffset" format="dimension" />
-    </declare-styleable>
-
 
     <!-- style for MaterialRefreshLayout  -->
     <declare-styleable name="MaterialRefreshLayout">
@@ -272,9 +235,7 @@
         <attr name="srlEnablePullToCloseTwoLevel" format="boolean"/>
     </declare-styleable>
 
-
-    <!--lsbanner-->
-    <declare-styleable name="LsBanner">
+    <declare-styleable name="Banner">
         <attr name="delay_time" format="integer" />
         <attr name="scroll_time" format="integer" />
         <attr name="is_auto_play" format="boolean" />
@@ -299,8 +260,6 @@
             <enum name="fit_xy" value="6" />
             <enum name="matrix" value="7" />
         </attr>
-        <!--<attr name="indicator_animator" format="reference" />-->
-        <!--<attr name="indicator_animator_reverse" format="reference" />-->
     </declare-styleable>
 <!--bottombar-->
     <declare-styleable name="BottomNavigationBar">
