2018-5-7 新增解析本地json

--- a/app/src/main/res/layout/activity_mains.xml
+++ b/app/src/main/res/layout/activity_mains.xml
@@ -8,6 +8,7 @@
     android:fitsSystemWindows="true"
     tools:openDrawer="start">
 <LinearLayout
+    android:id="@+id/ll_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -15,11 +16,19 @@
         layout="@layout/common_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
-
+    <com.ls.libarys.lsrefreshlayout.layout.LsRefreshLayout
+        android:id="@+id/rfyb"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:srlEnableScrollContentWhenLoaded="true"
+        app:srlPrimaryColor="@color/colorPrimary"
+        app:srlAccentColor="@android:color/white"
+        app:srlEnableFooterFollowWhenLoadFinished="true">
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
+    </com.ls.libarys.lsrefreshlayout.layout.LsRefreshLayout>
 </LinearLayout>
     <android.support.design.widget.NavigationView
         android:id="@+id/nav_view"
