--- a/app/src/main/res/layout/activity_balloon.xml
+++ b/app/src/main/res/layout/activity_balloon.xml
@@ -23,6 +23,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@android:color/white"
+            tools:listitem="@layout/item"
             />
         <com.ls.libarys.lsrefreshlayout.layout.footer.ClassicsFooter
             android:layout_width="match_parent"
