--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -42,6 +42,13 @@
         <item>己所不欲，勿施于人。——孔子</item>
         <item>嗨购5折不要停</item>
     </array>
+    <array name="titledata">
+        <item>第零条数据</item>
+        <item>第一条数据</item>
+        <item>第二条数据</item>
+        <item>第三条数据</item>
+        <item>第四条数据</item>
+    </array>
     <array name="demo_list">
         <item>banner动画预览</item>
         <item>banner内置样式预览</item>
