--- a/app/src/main/res/layout/activity_mains.xml
+++ b/app/src/main/res/layout/activity_mains.xml
@@ -5,6 +5,7 @@
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#f5f5f7"
     android:fitsSystemWindows="true"
     tools:openDrawer="start">
 <LinearLayout
