--- a/app/src/main/res/layout/grid_item.xml
+++ b/app/src/main/res/layout/grid_item.xml
@@ -4,11 +4,13 @@
     android:layout_height="wrap_content"
     android:id="@+id/gd_itme"
     android:gravity="center"
+    android:background="@color/white"
     android:orientation="vertical">
     <ImageView
         android:id="@+id/iv_ic"
-        android:layout_width="50dp"
-        android:layout_height="50dp"/>
+        android:layout_width="60dp"
+        android:scaleType="fitXY"
+        android:layout_height="60dp"/>
 
     <TextView
         android:id="@+id/tv_title"
