--- a/app/src/main/res/layout/vlayout_news.xml
+++ b/app/src/main/res/layout/vlayout_news.xml
@@ -4,11 +4,9 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center_vertical"
+    android:background="@color/white"
     android:orientation="horizontal"
-    android:paddingBottom="8dp"
-    android:paddingLeft="16dp"
-    android:paddingRight="16dp"
-    android:paddingTop="8dp">
+    >
 
     <ImageView
         android:layout_width="48dp"
@@ -16,23 +14,24 @@
         android:src="@mipmap/ic_news" />
 
     <View
-        android:layout_width="1px"
+        android:layout_width="10dp"
+        android:background="@color/red"
+        android:layout_margin="@dimen/kj_space_15"
         android:layout_height="match_parent"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp" />
+        />
 
 
-            <com.ls.libarys.view.MarqueeView
-                android:id="@+id/marqueeView1"
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:layout_marginLeft="6dp"
-                app:mvAnimDuration="1000"
-                app:mvDirection="bottom_to_top"
-                app:mvInterval="3000"
-                app:mvSingleLine="true"
-                app:mvTextColor="#666"
-                app:mvTextSize="12sp" />
+    <com.ls.libarys.view.MarqueeView
+        android:id="@+id/marqueeView1"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_marginLeft="6dp"
+        app:mvAnimDuration="1000"
+        app:mvDirection="bottom_to_top"
+        app:mvInterval="2000"
+        app:mvSingleLine="true"
+        app:mvTextColor="#666"
+        app:mvTextSize="12sp" />
 
 
 </LinearLayout>
