--- a/app/src/main/res/layout/fragment_shop.xml
+++ b/app/src/main/res/layout/fragment_shop.xml
@@ -8,6 +8,7 @@
     <com.ls.libarys.lsrefreshlayout.layout.LsRefreshLayout
         android:id="@+id/shop_refreshLayout"
         android:layout_width="match_parent"
+        app:srlEnableLoadMore="false"
         android:layout_height="match_parent">
         <com.ls.libarys.lsrefreshlayout.layout.header.ClassicsHeader
             android:layout_width="match_parent"
@@ -23,13 +24,12 @@
             app:srlDrawableArrowSize="20dp"
             app:srlDrawableProgressSize="20dp"
             app:srlDrawableMarginRight="20dp"
+
             app:srlDrawableProgress="@drawable/ic_progress_puzzle"/>
         <android.support.v7.widget.RecyclerView
             android:id="@+id/shop_rvlist"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
-        <com.ls.libarys.lsrefreshlayout.layout.footer.ClassicsFooter
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+
     </com.ls.libarys.lsrefreshlayout.layout.LsRefreshLayout>
 </LinearLayout>
