--- a/app/src/main/res/layout/item_serch.xml
+++ b/app/src/main/res/layout/item_serch.xml
@@ -1,11 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ImageView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:id="@+id/iv_serch"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="center"
-    android:src="@mipmap/img_title_serch"
-    android:textSize="16dp"
-    android:scaleType="fitXY"
-    android:text="哈哈"
-    android:minHeight="40dp" />
+    android:elevation="@dimen/kj_space_15"
+    android:layout_height="wrap_content"
+    android:minHeight="40dp">
+    <!--<android.support.v7.widget.CardView-->
+    <!--card_view:cardElevation="@dimen/kj_space_0"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent">-->
+    <ImageView
+        android:id="@+id/in_dp"
+        android:layout_width="match_parent"
+        android:background="@mipmap/img_title_serch"
+        android:scaleType="fitXY"
+        android:layout_height="match_parent" />
+    <!--</android.support.v7.widget.CardView>-->
+</LinearLayout>
