--- a/app/src/main/res/layout/new_item.xml
+++ b/app/src/main/res/layout/new_item.xml
@@ -1,13 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="100dp"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:id="@+id/ll_new"
     android:layout_marginLeft="@dimen/kj_space_10"
     android:layout_marginRight="@dimen/kj_space_10"
-    android:background="@color/white"
-    android:orientation="horizontal">
+    card_view:cardCornerRadius="2dp"
+    card_view:cardElevation="3dp"
+    android:background="@color/white">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:orientation="horizontal"
+        android:layout_height="match_parent">
     <ImageView
         android:id="@+id/iv_new"
         android:layout_width="120dp"
@@ -46,4 +51,5 @@
         android:layout_height="match_parent"
         />
     </LinearLayout>
-</LinearLayout>
+    </LinearLayout>
+</android.support.v7.widget.CardView>
