--- a/app/src/main/res/layout/util_item_view.xml
+++ b/app/src/main/res/layout/util_item_view.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="190dp"
     android:gravity="center"
+
     android:background="@drawable/bgsbw"
     android:orientation="horizontal">
 
@@ -14,15 +15,18 @@
         card_view:cardBackgroundColor="@android:color/white"
         card_view:cardCornerRadius="5dp"
         card_view:cardElevation="8dp"
+        card_view:contentPadding="@dimen/kj_space_0"
+        card_view:cardPreventCornerOverlap="true"
         card_view:cardUseCompatPadding="true">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:gravity="center"
+            android:layout_marginTop="0dp"
             android:orientation="vertical">
             <ImageView
                 android:id="@+id/util_icon"
+                android:layout_marginTop="0dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:src="@mipmap/util"/>
