--- a/libarys/src/main/res/values/dimens.xml
+++ b/libarys/src/main/res/values/dimens.xml
@@ -74,19 +74,16 @@
     <dimen name="fixed_no_title_icon_width">32dp</dimen>
     <dimen name="fixed_height_top_padding_inactive">2dp
     </dimen><!-- 8(Top Padding) - 12/2(extra padding due to badges) = 2 -->
-    <dimen name="fixed_height_top_padding_active">0dp
-    </dimen><!-- 6(Top Padding) - 12/2(extra padding due to badges) = 0 -->
-    <dimen name="fixed_height_bottom_padding">10dp</dimen>
+    <dimen name="fixed_height_top_padding_active">0dp</dimen><!-- 6(Top Padding) - 12/2(extra padding due to badges) = 0 -->
+    <dimen name="fixed_height_bottom_padding">5dp</dimen>
 
     <dimen name="fixed_label_active">14sp</dimen>
     <dimen name="fixed_label_inactive">12sp</dimen>
     <item name="fixed_label_active_to_inactive_ratio" format="float" type="dimen">0.857</item>
 
     <dimen name="fixed_icon_grid">24dp</dimen>
-    <dimen name="fixed_icon_badge_grid_height">36dp
-    </dimen><!-- this adds 6 dp extra to top and bottom icon -->
-    <dimen name="fixed_icon_badge_grid_width">48dp
-    </dimen><!-- this adds 6 dp extra to top and bottom icon -->
+    <dimen name="fixed_icon_badge_grid_height">36dp</dimen><!-- this adds 6 dp extra to top and bottom icon -->
+    <dimen name="fixed_icon_badge_grid_width">48dp</dimen><!-- this adds 6 dp extra to top and bottom icon -->
 
 
     <dimen name="shifting_min_width_active">96dp</dimen>
@@ -100,8 +97,7 @@
     <dimen name="shifting_no_title_icon_container_width">56dp</dimen>
     <dimen name="shifting_no_title_icon_height">32dp</dimen>
     <dimen name="shifting_no_title_icon_width">32dp</dimen>
-    <dimen name="shifting_height_bottom_padding_inactive">16dp
-    </dimen><!-- not used because in inactive state text-view will be hidden and for icon top padding would be enough -->
+    <dimen name="shifting_height_bottom_padding_inactive">16dp</dimen><!-- not used because in inactive state text-view will be hidden and for icon top padding would be enough -->
     <dimen name="shifting_height_bottom_padding_active">10dp</dimen>
     <dimen name="shifting_height_top_padding_active">0dp
     </dimen><!-- 6(Top padding) - 12/2(extra padding due to badges) = 0 -->
